| Bug #4803 | SHOW CREATE VIEW doesn't work when using view in subquery | ||
|---|---|---|---|
| Submitted: | 29 Jul 2004 12:19 | Modified: | 25 Aug 2004 9:04 |
| Reporter: | Georg Richter | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 5.0.1 | OS: | |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[29 Jul 2004 12:19]
Georg Richter
[6 Aug 2004 3:12]
MySQL Verification Team
Verified against latest BK tree 5.0.
[24 Aug 2004 21:53]
Oleksandr Byelkin
ChangeSet 1.1732 04/08/24 22:51:23 bell@sanja.is.com.ua +5 -0 new method to detect commands where all VIEWs should be temporary tables (BUG#4803)
[25 Aug 2004 9:03]
Oleksandr Byelkin
Thank you for bugreport! Bugfix is pushed into our source repository.
