new method to detect commands where all VIEWs should be temporary tables (BUG#4803)